Fix LandScape WhiteBars on Mobile Devices

--- a/src/App.css
+++ b/src/App.css
@@ -23,7 +23,7 @@ button:hover {
     top: 0;
     left: 0;
     /* make it fill the viewport */
-    width: 100vw;
+    width: 100%;
     height: 100vh;
     /* crop & scale to cover without letterboxing */
     object-fit: cover;
@@ -591,6 +591,7 @@ span.ratingLabel, .cardRatings {
 @media (max-width: 1050px), (hover: none) and (pointer:  coarse){
     html {
         font-size: max(1vh, 1vw);
+        width: 100%;
     }
     #root {
         width: 100%;
